src/test/deca/context/invalid/homeMade/tests/test337_type_op_unaire/test337_type_unaire12.deca
// test invalide de la règle 3.37

{
    boolean a = !"toto";
}
